--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
   </div>
   <div id="legend__bottom">
     <div id="legend__bottom__left">
+        <div><span id="killsCounter1">0</span></div>
         <div class="item1"><img class="legend__img__bottom" src="images/letter_s.png" alt="S"><img class="text__bang" src="images/bang.png" alt="bang!"></div>
         <div class="item2"><img class="legend__img__bottom" src="images/letter_a.png" alt="A"><img class="text__charge" src="images/charge.png" alt="Charge!"></div>
     </div>
+    <div><span id="winnerText"></span></div>
     <div id="legend__bottom__right">
         <div class="item3"><img class="legend__img__bottom" src="images/letter_l.png" alt="L"><img class="text__bang" src="images/bang.png" alt="bang!"></div>
         <div class="item4"><img class="legend__img__bottom" src="images/letter_k.png" alt="K"><img class="text__charge" src="images/charge.png" alt="Charge!"></div>
+        <div><span id="killsCounter2">0</span></div>
     </div>  
+    <div><button id="resetButton">RESET</button></div>
   </div>
   <script src="plantsVsZombies.js"></script>
 </body>
